# EchoWatch

./: .gitignore  README.md  platformio.ini
LVGL_Arduino/: Audio_PCM5101.cpp  CMakeLists.txt  LVGL_Arduino.ino  MIC_MSM.cpp  SquareLine_Project.sll  filelist.txt  ui.c  ui.h  ui_FindAppScreen.c  ui_FindAppScreen.h  ui_HomeScreen.c  ui_HomeScreen.h  ui_LightAppScreen.c  ui_Screen1.c  ui_SoundManagerScreen.c  ui_SoundManagerScreen.h  ui_img_1280652718.c  ui_img_lightapp_png.c  ui_img_lightoff3_png.c  ui_img_stop_png.c
SquareLine/: CMakeLists.txt  SquareLine_Project.spj  filelist.txt  ui.c  ui.h  ui_FindAppScreen.c  ui_HomeScreen.c  ui_LightAppScreen.c  ui_LightAppScreen.h  ui_SoundManagerScreen.c  ui_SoundManagerScreen.h  ui_img_background_png.c  ui_img_ellipse_22_png.c  ui_img_findappicon_png.c  ui_img_lighton3_png.c  ui_img_resume_png.c
code/: LVGL_Arduino.ino  ui_Screen1.c  ui_Screen1.h  ui_helpers.c
docs/: Chiffrage_Projet.md  Documentation_Technique.md  Guide_Installation.md
scripts/: lampe.py
simulation_mqtt/: main.py  publish_sound.py  publish_sound_chunks.py
squareline/: SquareLine_Project.sll  SquareLine_Project.spj
squareline/assets/: ui_font_JejuGothicRegular.c  ui_font_JejuGothicRegular.fcfg
